RESOLVED FIXED240770
REGRESSION(r293956): Bad color inheritance due to disallowsFastPathInheritance bit missing from RenderStyle::copyNonInheritedFrom
https://bugs.webkit.org/show_bug.cgi?id=240770
Summary REGRESSION(r293956): Bad color inheritance due to disallowsFastPathInheritanc...
Antti Koivisto
Reported 2022-05-21 22:50:20 PDT
<!DOCTYPE html> <html> <body style="font-family: ahem; font-size: 50px"> <span style="color:green">A</span><span style="color:green">B</span><span>C</span> <script> document.body.offsetTop; document.body.style.color = "blue"; </script> </html>
Attachments
Patch (2.83 KB, patch)
2022-05-21 23:04 PDT, Antti Koivisto
ews-feeder: commit-queue-
Antti Koivisto
Comment 1 2022-05-21 23:04:37 PDT
EWS
Comment 2 2022-05-22 07:36:23 PDT
Committed r294620 (250846@main): <https://commits.webkit.org/250846@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 459645 [details].
Radar WebKit Bug Importer
Comment 3 2022-05-22 07:37:13 PDT
Note You need to log in before you can comment on or make changes to this bug.