REGRESSION(r293956): Bad color inheritance due to disallowsFastPathInheritance bit missing from RenderStyle::copyNonInheritedFrom https://bugs.webkit.org/show_bug.cgi?id=240770

Reviewed by Alan Bujtas.

Test: fast/css/color-inheritance-dynamic.html

* Source/WebCore/rendering/style/RenderStyle.h:
(WebCore::RenderStyle::NonInheritedFlags::copyNonInheritedFrom):

Add it.

* LayoutTests/fast/css/color-inheritance-dynamic-expected.html: Added.
* LayoutTests/fast/css/color-inheritance-dynamic.html: Added.

Canonical link: https://commits.webkit.org/250846@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294620 268f45cc-cd09-0410-ab3c-d52691b4dbfc